--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /*
-Template Name: Gomag
+Template Name: Edgpress
 Author: <a href="http://www.os-templates.com/">OS Templates</a>
 Author URI: http://www.os-templates.com/
 Licence: Free to use under our free template licence terms
@@ -45,6 +45,11 @@ a{outline:none; text-decoration:none;}
 img{width:auto; max-width:100%; height:auto; margin:0; padding:0; border:none; line-height:normal; vertical-align:middle;}
 .imgl{margin:0 15px 10px 0; clear:left;}
 .imgr{margin:0 0 10px 15px; clear:right;}
+.imgover{display:inline-block; position:relative; max-width:100%;}
+.imgover::before, .imgover::after{display:block; position:absolute; content:""; text-align:center; opacity:0;}
+.imgover::before{top:0; right:0; bottom:0; left:0;}
+.imgover::after{top:50%; left:50%; width:50px; height:50px; line-height:50px; margin:-25px 0 0 -25px; content:"\f06e";/* fa-eye */ font-family:"FontAwesome"; font-size:36px;}
+.imgover:hover::before, .imgover:hover::after{opacity:1;}
 
 
 /* Fonts
@@ -64,7 +69,7 @@ label{margin-bottom:5px;}
 
 /* Generalise
 --------------------------------------------------------------------------------------------------------------- */
-h1, h2, h3, h4, h5, h6, .heading{margin:0 0 20px 0; font-size:22px; line-height:normal; font-weight:normal; text-transform:capitalize;}
+h1, h2, h3, h4, h5, h6, .heading{margin:0 0 20px 0; font-size:22px; line-height:normal; font-weight:normal; text-transform:capitalize; font-variant:small-caps;}
 .heading.nospace{margin-bottom:0;}
 
 address{font-style:normal; font-weight:normal;}
@@ -80,7 +85,7 @@ hr{display:block; width:100%; height:1px; border:solid; border-width:1px 0 0 0;}
 The "hoc" class is a generic class used to centre a containing element horizontally
 It should be used in conjunction with a second class or ID
 */
-.hoc{display:block; margin:0 auto;}
+.hoc, .split{display:block; margin:0 auto;}
 
 
 /* HTML 5 Overrides
