--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -23,13 +23,13 @@
 
 /* Page Intro
 --------------------------------------------------------------------------------------------------------------- */
-#pageintro{padding:250px 0;}
+#pageintro{padding:200px 0;}
 
 #pageintro > div{display:block; max-width:60%;}
 #pageintro > div *{line-height:normal;text-align: justify;}
 #pageintro .heading{
 	color:#000000;
-	margin:0 0 30px 0; padding:0; font-size:8rem;}
+	margin:0 0 30px 0; padding:0; font-size:7rem;}
 #pageintro p{margin:0; font-size: 1.3rem;
     line-height: 2rem;
     background-color: snow;
@@ -37,14 +37,35 @@
     padding: 15px;
     border-radius: 25px;}
 #pageintro footer{margin-top:30px;}
+/* Footer
+--------------------------------------------------------------------------------------------------------------- */
+#footer{padding:80px 0;}
+
+#footer .heading{margin-bottom:50px; font-size:1.2rem;}
+
+#footer .linklist li{display:block; margin-bottom:15px; padding:0 0 15px 0; border-bottom:1px solid;}
+#footer .linklist li:last-child{margin:0; padding:0; border:none;}
+#footer .linklist li::before, #footer .linklist li::after{display:table; content:"";}
+#footer .linklist li, #footer .linklist li::after{clear:both;}
+
+#footer .contact{}
+#footer .contact.linklist li, #footer .contact.linklist li:last-child{position:relative; padding-left:40px;}
+#footer .contact li *{margin:0; padding:0; line-height:1.6;}
+#footer .contact li i{display:block; position:absolute; top:0; left:0; width:30px; font-size:16px; text-align:center;}
+
+#footer input, #footer button{border:1px solid;}
+#footer input{display:block; width:100%; padding:8px;}
+#footer button{padding:8px 18px 10px; text-transform:uppercase; font-weight:700; cursor:pointer;}
+
+
 
 /* Copyright
 --------------------------------------------------------------------------------------------------------------- */
 #copyright{padding:20px 0;}
 #copyright *{margin:0; padding:0;}
 
-
-
+*, *::before, *::after{transition:all .28s ease-in-out;}
+#mainav form *{transition:none !important;}
 
 /* Navigation
 --------------------------------------------------------------------------------------------------------------- */
@@ -142,6 +163,23 @@ input:focus, textarea:focus, *:required:focus{border-color:#CF4845;}
 /* Page Intro */
 #pageintro{color:#000000;}
 
+/*footer*/
+#footer .heading{color:#FFFFFF;}
+#footer hr, #footer .borderedbox, #footer .linklist li{border-color:rgba(255,255,255,.1);}
+
+#footer .faico a{color:#32353C; background-color:#FFFFFF;}
+#footer .faico a:hover{color:#FFFFFF;}
+#footer .faicon-dribble:hover{background-color:#EA4C89;}
+#footer .faicon-facebook:hover{background-color:#3B5998;}
+#footer .faicon-google-plus:hover{background-color:#DB4A39;}
+#footer .faicon-linkedin:hover{background-color:#0E76A8;}
+#footer .faicon-twitter:hover{background-color:#00ACEE;}
+#footer .faicon-vk:hover{background-color:#4E658E;}
+
+#footer input, #footer button{border-color:transparent;}
+#footer input{color:#32353C; background-color:#FFFFFF;}
+#footer input:focus{border-color:#E43F21;}
+#footer button{color:#FFFFFF; background-color:#E43F21;}
 
 
 /* Navigation */
@@ -207,8 +245,13 @@ input:focus, textarea:focus, *:required:focus{border-color:#CF4845;}
 
 	#header{text-align:center;}
 	#header #logo{margin-bottom:15px;}
+	#footer{padding-bottom:50px;}
 }
-
+/*map*/
+ #map {
+        height: 400px;
+        width: 100%;
+       }
 
 /* Other
 --------------------------------------------------------------------------------------------------------------- */
